--- a/src/app/stock/stock-manage/stock-manage.component.html
+++ b/src/app/stock/stock-manage/stock-manage.component.html
@@ -2,7 +2,9 @@
   <div class="col-md-12">
     <div class="box">
       <div class="box-header with-border">
-        <a href="#" class="btn btn-success btn-sm"><span class="glyphicon glyphicon-plus"></span>创建</a>
+        <a href="javascript:;" class="btn btn-success btn-sm" (click)="create()">
+          <span class="glyphicon glyphicon-plus"></span>创建
+        </a>
 
         <div class="box-tools">
           <div class="input-group input-group-sm" style="width: 150px; margin-top:7px;">
@@ -32,7 +34,7 @@
               <app-stars [rating]="stock.rating"></app-stars>
             </td>
             <td>
-              <a href="#" class="btn btn-xs btn-warning"><span class="glyphicon glyphicon-pencil"></span>修改</a>
+              <a href="javascript:;" class="btn btn-xs btn-warning" (click)="update(stock)"><span class="glyphicon glyphicon-pencil"></span>修改</a>
               <a href="#" class="btn btn-xs btn-danger"><span class="glyphicon glyphicon-remove"></span>删除</a>
             </td>
           </tr>
