--- a/src/app/stock/stock-manage/stock-manage.component.html
+++ b/src/app/stock/stock-manage/stock-manage.component.html
@@ -8,7 +8,8 @@
 
         <div class="box-tools">
           <div class="input-group input-group-sm" style="width: 150px; margin-top:7px;">
-            <input type="text" name="table_search" class="form-control pull-right" placeholder="股票名称">
+            <input [formControl]="nameFilter" type="text" name="table_search" class="form-control pull-right"
+                   placeholder="股票名称">
 
             <div class="input-group-btn">
               <button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
@@ -26,7 +27,7 @@
             <th>股票评级</th>
             <th>操作</th>
           </tr>
-          <tr *ngFor="let stock of stocks;let i = index">
+          <tr *ngFor="let stock of stocks | stockFilter:'name':keyword ;let i = index">
             <td>{{i+1}}</td>
             <td>{{stock.name}}</td>
             <td>{{stock.price}}</td>
@@ -34,7 +35,8 @@
               <app-stars [rating]="stock.rating"></app-stars>
             </td>
             <td>
-              <a href="javascript:;" class="btn btn-xs btn-warning" (click)="update(stock)"><span class="glyphicon glyphicon-pencil"></span>修改</a>
+              <a href="javascript:;" class="btn btn-xs btn-warning" (click)="update(stock)"><span
+                class="glyphicon glyphicon-pencil"></span>修改</a>
               <a href="#" class="btn btn-xs btn-danger"><span class="glyphicon glyphicon-remove"></span>删除</a>
             </td>
           </tr>
