--- a/src/app/stars/stars.component.html
+++ b/src/app/stars/stars.component.html
@@ -1,1 +1,1 @@
-<span *ngFor="let star of stars" class="glyphicon glyphicon-star" [class.glyphicon-star-empty]="star"></span>
+<span *ngFor="let star of stars;let i = index" (click)="setStar(i)" class="glyphicon glyphicon-star" [class.glyphicon-star-empty]="star"></span>
